--- a/project-service/src/main/fabric8/deployment.yml
+++ b/project-service/src/main/fabric8/deployment.yml
@@ -3,14 +3,35 @@ spec:
     spec:
       containers:
         - name: vertx
+          livenessProbe:
+            failureThreshold: 2
+            httpGet:
+              path: "/health/liveness"
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: "/health/readiness"
+              port: 8080
+              scheme: HTTP
+            initialDelaySeconds: 20
+            periodSeconds: 10
+            successTreshold: 1
+            timeoutSeconds: 1
+          resources:
+            limits:
+              cpu: 500m
+              memory: 500Mi
+            requests:
+              cpu: 100m
+              memory: 200Mi
           env:
-            - name: DB_USERNAME
-              valueFrom:
-                 secretKeyRef:
-                   name: my-database-secret
-                   key: user
-            - name: DB_PASSWORD
-              valueFrom:
-                 secretKeyRef:
-                   name: my-database-secret
-                   key: password
+            - name: APP_CONFIGMAP_NAME
+              value: project-service
+            - name: APP_CONFIGMAP_KEY
+              value: app-config.yml
